# stm32f0-boilterplate

./: .clangd  .gitmodules  CMakeLists.txt  Makefile  stm32f0.cmake  toolchain.cmake  uncrustify.cfg
application/source/: main.c
system/: CMakeLists.txt
system/include/: pin_list.h
system/source/: stm32f0xx_hal_msp.c  stm32f0xx_it.c  system_stm32f0xx.c
